LPD-66480 Refactoring